# dhrun

./: .README.md  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .hlint.yaml  .repoquality  AUTHORS  ChangeLog.md  LICENSE  README.md  brittany.yaml  cabal.dh  default.nix  dhall-exec.cabal  dhall-executor  dhall-executor.cabal  dhrun.cabal  dhrun.dhall  notes  notes.md  pre-commit.sh  quickstart.yml  shake.hs  shake.sh  todo.md
app/: Main.hs
completion/: dhall-executor.sh
examples/: full.dh  full.yml  simple.dh  simple.yml  singleProcess.dhall  two.dh  two.yml
examples/full/: full.dh  full.yml
examples/simple/: simple.dh  simple.yml
examples/two/: two.dh  two.yml
nix/: default.nix  dhrun.cabal  utils.nix
nix/panhandle/: pin.json
resources/: Check.dh  Cmd.dh  FileCheck.dh  Normal.dh  Verbose.dh  Verbosity.dh  package.dh  types.dh
resources/Cmd/: Cmd.dh  empty.dh
resources/Config/: Config.dh
resources/FileCheck/: FileCheck.dh
resources/defaults/: Cfg.dhall  Cfg.json  Cfg.yaml
resources/examples/: .dhall  .json  .yaml  success-echo.dhall  success-echo.json  success-exit1.json  success-exit1.yaml  success-exit5.dhall  success-exit5.yaml
resources/examples-failures/: failure-pattern-avoid.dhall  failure-pattern-avoid.json  failure-pattern-avoid.yaml  failure-pattern-miss.dhall  failure-pattern-miss.json  failure-pattern-miss.yaml
resources/examples-successes/: success-echo.dhall  success-echo.json  success-echo.yaml  success-exit1.dhall  success-exit1.json  success-exit1.yaml  success-exit5.dhall  success-exit5.json  success-exit5.yaml
resources/types/: Cfg.dhall
src/: Dhrun.hs  dhall-exec.hs
src/Dhallexec/: Types.hs
src/Dhrun/: AesonTypes.hs  Bin.hs  Cfg.hs  Conduit.hs  Dhall.hs  Internal.hs  Pure.hs  Pureutils.hs  Run.hs  Types.hs  Yaml.hs
src/Dhrun/Types/: Cfg.hs  Dhall.hs  Yaml.hs
tests/: Tests.hs
