name:                dhrun
version:             0.0.1
license:             MIT
license-file:        LICENSE
author:              Valentin Reis
maintainer:          fre@freux.fr
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10
category:            tools
synopsis:            dhall async CI executor
description:         reads process information from a dhall configuration and executes asynchronous processes.
cabal-version:       2.0

Source-Repository head
  Type: git
  Location: https://xgitlab.mcs.anl.gov/vreis/dhrun

executable dhrun
  hs-source-dirs: app
  main-is: Main.hs
  build-depends:
    base,
    protolude,
    directory,
    bytestring,
    editor-open,
    dhrun-lib,
    filepath,
    optparse-applicative,
    dhall
  default-language: Haskell2010
  ghc-options:
    -threaded
    -Wall
    -Wcompat
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wmissing-home-modules
    -Widentities
    -Wredundant-constraints
    -Wcpp-undef
    -fwarn-tabs
    -fwarn-unused-imports
    -fwarn-missing-signatures
    -fwarn-name-shadowing
    -fprint-potential-instances
    -Wmissing-export-lists
    -fwarn-unused-do-bind
    -fwarn-wrong-do-bind
    -fwarn-incomplete-patterns
  default-extensions:
    LambdaCase
    RecordWildCards
    ScopedTypeVariables
    NoImplicitPrelude
    OverloadedStrings

library dhrun-lib
  hs-source-dirs: src
  exposed-modules:
    Dhrun.Types.Cfg,
    Dhrun.Types.Dhall,
    Dhrun.Types.Yaml,
    Dhrun.Run,
    Dhrun.Pure,
    Dhrun.Conduit
  build-depends:
    base,
    ansi-terminal,
    protolude,
    mtl,
    bytestring,
    process,
    conduit,
    unliftio-core,
    containers,
    conduit-extra,
    unix,
    yaml,
    aeson,
    unliftio-core,
    text,
    directory,
    dhall
  default-language:    Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wmissing-home-modules
    -Widentities
    -Wredundant-constraints
    -Wcpp-undef
    -fwarn-tabs
    -fwarn-unused-imports
    -fwarn-missing-signatures
    -fwarn-name-shadowing
    -fprint-potential-instances
    -Wmissing-export-lists
    -fwarn-unused-do-bind
    -fwarn-wrong-do-bind
    -fwarn-incomplete-patterns
  default-extensions:
    LambdaCase
    RecordWildCards
    ScopedTypeVariables
    NoImplicitPrelude
    OverloadedStrings

test-suite Tests
  type: exitcode-stdio-1.0
  main-is: Tests.hs
  hs-source-dirs: tests
  default-language: Haskell2010
  build-depends:
      base
    , protolude
    , dhall
    , yaml
    , aeson
    , mtl
    , bytestring
    , text
    , unliftio
    , tasty
    , tasty-hunit
    , tasty-golden
    , tasty-hspec
    , tasty-quickcheck
    , quickcheck-text
    , hspec
    , dhrun-lib
    , monad-mock
    , Glob
  ghc-options:
    -threaded
    -Wall
    -Wcompat
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wmissing-home-modules
    -Widentities
    -Wredundant-constraints
    -Wcpp-undef
    -fwarn-tabs
    -fwarn-unused-imports
    -fwarn-unused-do-bind
    -fwarn-wrong-do-bind
    -fwarn-missing-signatures
    -fwarn-name-shadowing
    -fprint-potential-instances
    -fwarn-incomplete-patterns
  default-extensions:
    LambdaCase
    RecordWildCards
    ScopedTypeVariables
    NoImplicitPrelude
    OverloadedStrings
